# treemix

./: .cproject  CountData.cpp  CountData.h  CountData2.cpp  GraphState.cpp  GraphState.h  GraphState2.cpp  GraphState2.h  GraphState3.cpp  GraphState3.h  MCMC.cpp  MCMC.h  MCMC_graph.cpp  MCMC_graph.h  MCMC_params.cpp  MCMC_params.h  Makefile.in  Node.cpp  Node.h  PhyloPop.cpp  PhyloPop_graph.cpp  PhyloPop_params.cpp  PhyloPop_params.h  PopGraph.cpp  PopGraph.h  PopGraph2.h  ProjectHome.md  Settings.hpp  State.cpp  State.h  Tree.cpp  Tree.h  TreeMix.cpp  WishartState.h  boost.m4.m4  configure  configure.ac  iterator.cpp  iterator.h  makefile  (+5 more)
branch/v1/: .cproject  Makefile.in
branch/v1.01/: .project  Makefile.am  README
branch/v1.01/src/: BinaryTree.cpp  CountData.cpp  (+11 more)
src/: CountData.cpp  CountData.h  CountData2.h  GraphState2.cpp  GraphState2.h  Makefile  Makefile.am  Makefile.in  PhyloPop_params.cpp  PhyloPop_params.h  PopGraph.cpp  SNP.cpp  TreeMix.cpp  WishartState.cpp  config.h  four_pop.cpp  plotting_funcs.R  scan_snp.cpp  test2.cpp  treemix
src/.deps/: CmdLine.Po  GraphState2.Po  PhyloPop_params.Po  nnls.Po
trunk/: CountData.cpp  CountData.h  GraphState.cpp  GraphState.h  GraphState2.cpp  GraphState2.h  MCMC.cpp  MCMC_graph.cpp  MCMC_graph.h  MCMC_params.cpp  MCMC_params.h  Makefile.in  NodeData.hpp  PhyloPop.cpp  PhyloPop_graph.cpp  PhyloPop_params.cpp  PhyloPop_params.h  PopGraph.cpp  PopGraph.h  PopGraph2.cpp  Settings.hpp  State.cpp  State.h  Tree.cpp  Tree.h  TreeMix.cpp  WishartState.cpp  config.h.in  configure  configure.ac  iterator.cpp  makefile  mean_fst.cpp  mvnorm.cpp  test  test.cpp  test2.cpp
trunk/src/: CountData.cpp  CountData.h  Drifts.cpp  GraphState2.cpp  GraphState2.h  Makefile  Makefile.am  Makefile.in  PhyloPop_params.cpp  PhyloPop_params.h  PhyloPop_wishart.cpp  PopGraph.cpp  PopGraph.h  SNP.h  Settings.hpp  TreeMix.cpp  ancestry.cpp  f4_ratio.cpp  four_pop.cpp  mig_est_4pop.cpp  nnls.cpp  plotting_funcs.R  scan_snp.cpp  test.cpp  test2.cpp  three_pop.cpp  treemix
trunk/src/.deps/: CountData.Po  GraphState2.Po  PopGraph.Po  treemix.Po
(+22 files in other folders)
